sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/WithElseIfButMissingElse.sand
pub class WithElseIfButMissingElse {
    foo() {
        let a = if cond {
            b
        } else if cond {
            b
        };
    }
}